* Allow querying (extracting values out of) a request specification using the io.restassured.specification.SpecificationQuerier. For example:
    RequestSpecification spec = ...
    QueryableRequestSpecification queryable = SpecificationQuerier.query(spec);
    String headerValue = queryable.getHeaders().getValue("header");
    String param = queryable.getFormParams().get("someparam");

Change log 3.0.7 (2018-02-09)
-----------------------------
* CookieFilter now conforms to RFC6265 standard by only copying expected cookies instead of all (thanks to Maciej Ciszewski for pull request) (issue 956).
* Prettifier can now prettify empty xml body (issue 960)
* Introduced a "detailed cookie matcher" that allows you to verify more detailed aspects of a cookie, for example:
    given().
        get("/multiCookie").
    then()
        cookie("cookie1", detailedCookie().maxAge(1234567));
  (thanks to Rafał Siwiec for pull request)

Change log 3.0.6 (2017-11-23)
-----------------------------
* Upgraded to Groovy 2.4.12
* REST Assured now works on Java 9

Change log 3.0.5 (2017-10-05)
-----------------------------
* Reverted the API to take String instead of CharSequence again since this change introduced an accidental breaking change by not being binary compatible (only source compatible).

Change log 3.0.4 (2017-10-05)
-----------------------------
* Changed API to take CharSequence instead of String. For example the "get" method in when().get("/something").. now takes a CharSequence instead of String (issue 858) (thanks to weaselmetal for pull request)
* Fixed so that assertions on content type with a ContentType.BINARY argument don't fail for binary content (issue 861) (thanks to Grégory Fouquet for pull request)
* Fixed an issue with two-way SSL whose root cause was Apache HTTP Client v4.5.2. Upgrading to 4.5.3 solved the issue (thanks to Ryan Tighe for pull request)